--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+# Environment
+/src/environments
 
 # Compiled output
 /dist
@@ -40,3 +42,8 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
